--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="imge/z4314121971985_06f037657a120440a5433f1c6e1a406a.jpg" alt="Your Picture" class="profile-pic">
             <h1>Nguyễn Hoàng Mai Vy</h1>
             <p>Sinh viên khoa Công nghệ thông tin / Trường Đại học Sài Gòn</p>
-            <p>Email: <a href="#">vynguyen08257@gmail.com</a></p>
+            <p>Email: <a href="vynguyen08257@gmail.com">vynguyen08257@gmail.com</a></p>
             <div class="links">
                 <a href="https://github.com/nguyenmaivy">GitHub</a> |
                 <a href="https://www.facebook.com/profile.php?id=100023367189103">Facebook</a> |
